<resources>
    <string name="app_name">VolleyExample</string>
    <string name="name">Name = </string>
    <string name="user_name">User Name</string>
    <string name="email">Email = </string>
    <string name="user_email">User Email</string>
    <string name="user_id">"User ID = "</string>
    <string name="user_id_">user_id</string>
    <string name="user_type">User Type = </string>
    <string name="user_type_">User Type</string>
    <string name="get_data">Get Data</string>
    <string name="log_in">Log in</string>
    <string name="email_input">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="logo">Logo</string>
    <string name="error">Error</string>
    <string name="invalid_credentials">Invalid Credentials!!</string>
    <string name="company_id">"Company Id = "</string>
    <string name="comapny_id_">Comapny Id</string>
    <string name="role_name">"Role Name = "</string>
    <string name="role_name_">Role name</string>
    <string name="welcome">WELCOME</string>
    <string name="log_out">Log out</string>
    <string name="remember_me">Remember me</string>
    <string name="please_fill_all_fields">Please fill all fields!!</string>
    <string name="email_or_password_is_incorrect">Email or Password is incorrect!!</string>
</resources>