<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="250dp"
        android:layout_height="50dp"

        android:background="@drawable/shape_left"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_left"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_left"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_left"
        app:layout_constraintBottom_toTopOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/detailsArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/userEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_email"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/companyId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_id_"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_type"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/userType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/user_type_"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/getDataBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="48dp"
        android:text="@string/get_data"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsArea" />

</androidx.constraintlayout.widget.ConstraintLayout>